# hxltm

./: .editorconfig  .gitignore  CHANGELOG.md  CNAME  README.md  SECURITY.md  index.html  ontologia-regulam.html  setup.cfg  tox.ini
.github/workflows/: asciidoctor-ghpages.yml  hxltm-computo_testum.yml  hxltm-normae_documentum_hxltm-etica-ai.yml  testum.yml
docs/: codex-simplex-ontologiae.html  index.adoc  ontologia-regulam.html
docs/archivum/: README.adoc
docs/codex-simplex-ontologiae/: index.html  ontologia.yml  usum-professori.csv
docs/eng-Latn/: dictianarium.adoc  dictionary.adoc  draft-eng-Latn.adoc  hxltm.adoc  index-old.adoc  index.adoc
docs/eng-Latn/archivum/: index.adoc
docs/eng-Latn/index/: index.adoc
eng-Latn/: dictionary.html  index-old.html  index.html
eng-Latn/index/: index.html
ontologia/: 0.77.995.json  0.77.995.yml  36.77.995.yml  README.adoc  README.html  README.md  cor.hxltm.215.json  cor.hxltm.215.yml  ❤️.____.993.yml
testum/: disciplinam-manuale-anglicum.sh  download-hxltm-datum.sh  hxl-non-hxltm-exemplum.hxl.csv  hxltm-exemplum-glossarium-minimum.tm.hxl.csv  hxltm-exemplum-linguam.tmeta.yml  hxltm-salve-mundi.hxltm.xml  hxltmcli--help_eng-Latn.txt  hxltmdexml--help_eng-Latn.txt  manuale-testum.sh
testum/de-csv/: csv-non-hxltm-exemplum.csv
testum/de-extraneum/: hxltm-bi-linguam-in-columnam.csv  hxltm-multi-linguam-in-columnam-v.csv  hxltm-multi-linguam-in-columnam.csv  hxltm-solum-id.tm.hxl.csv  hxltm-solum-linguam.tm.hxl.csv
testum/de-hxl/: hxl-non-hxltm-exemplum.hxl.csv
testum/de-python/testinfra/: test_disciplinam_manuale.py  test_simplex.py
testum/resultatum/: csv-3-exemplum.csv  hxltm-exemplum-linguam.hxltm.xml  hxltm-exemplum-linguam.por-Latn--spa-Latn.obsoletum.xlf  hxltm-exemplum-linguam.por-Latn--spa-Latn.xlf  hxltm-exemplum-linguam.por-Latn_spa-Latn.csv  hxltm-exemplum-linguam.por-Latn_spa-Latn.tsv  hxltm-exemplum-linguam.tbx  hxltm-exemplum-linguam.tmx  hxltm-exemplum-linguam.utx  hxltm-salve-mundi.tm.hxl.csv
testum/resultatum/de-csv/: csv-non-hxltm-exemplum.tm.hxl.csv
testum/rursum/XLIFF/: hxltm-exemplum-linguam.por-Latn--spa-Latn.tm.hxl.csv
testum/rursum/XLIFF-obsoletum/: hxltm-exemplum-linguam.por-Latn--spa-Latn.tm.hxl.csv
