[metadata]
# Emerson Rocha notes:
#     using username '-eticaai' on 'hxltm-eticaai' to provide some namespace.
#     if forks do eventually exist.
#     The 'hxltm', as 2021-11-13, is actually not used on Python pip.
name = hxltm-eticaai
version = 0.8.9-rc.1
author = Emerson Rocha
author_email = rocha@ieee.org
description = HXLTM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EticaAI/hxltm
project_urls =
    Bug Tracker = https://github.com/EticaAI/hxltm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent
    Typing :: Typed
    Topic :: Utilities

[options]
package_dir =
    = bin
packages = find:
python_requires = >=3.7

[options.packages.find]
where = bin