[metadata]
# Emerson Rocha notes:
#     using username '-eticaai' on 'hxltm-eticaai' to provide some namespace.
#     if forks do eventually exist.
#     The 'hxltm', as 2021-11-13, is actually not used on Python pip.
name = hxltm-eticaai
version = 0.8.9-rc.1
author = Emerson Rocha
author_email = rocha@ieee.org
description = HXLTM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EticaAI/hxltm
project_urls =
    Bug Tracker = https://github.com/EticaAI/hxltm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent
    Typing :: Typed
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:


python_requires = >=3.7

install_requires =
    libhxl
    # pygments
    pyyaml
    langcodes # used by hxltmcli, hxltmcli, hxltmdexml
    python-liquid # used by hxltmcli, hxltmdexml


[options.packages.find]
where = src

# namespace_packages = hxltm
# packages =
#     hxlm.core

[options.package_data]
# * = *.yml, *.json, *.csv
hxltm.bin = *.yml


# [options.entry_points]
# console_scripts =
#     ; urnresolver = hxlm.core.bin.urnresolver:main
#     ; urnresolver = hxlm.core.bin.urnresolver:urnresolver
#     # hdpcli = hxlm.core.bin.hdpcli:exec_from_console_scripts
#     hxltmdexml = hxltm.hxltmdexml:exec_from_console_scripts
#     hxltmcli = hxltm.hxltmdexml:exec_from_console_scripts
#     # urnresolver = hxlm.core.bin.urnresolver:exec_from_console_scripts
#     # urnprovider-local = hxlm.core.bin.urnprovider_local:exec_from_console_scripts
#     # hxl2tab = hxlm.core.bin.hxl2tab:exec_from_console_scripts
#     # hxlquickimport = hxlm.core.bin.hxlquickimport:exec_from_console_scripts
#     # hxlquickmeta = hxlm.core.bin.hxlquickmeta:exec_from_console_scripts