[metadata]
# Emerson Rocha notes:
#     using username '-eticaai' on 'hxltm-eticaai' to provide some namespace.
#     if forks do eventually exist.
#     The 'hxltm', as 2021-11-13, is actually not used on Python pip.
name = hxltm-eticaai
version = 0.9.2rc2
author = Emerson Rocha
author_email = rocha@ieee.org
description = Multilingual Terminology in Humanitarian Language Exchange (HXLTM) - reference implementation.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/EticaAI/hxltm
project_urls =
    Bug Tracker = https://github.com/EticaAI/hxltm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent
    Typing :: Typed
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
# Runtime dependencies (varies by binary)
#     pip install libhxl pyyaml langcodes python-liquid

[options.package_data]
hxltm.bin = *.yml

[options.entry_points]
console_scripts =
    hxltmdexml = hxltm.bin.hxltmdexml:exec_from_console_scripts
    hxltmcli = hxltm.bin.hxltmcli:exec_from_console_scripts

#### pypi ______________________________________________________________________
### Upload, register step ------------------------------------------------------

## @see https://packaging.python.org/tutorials/packaging-projects/
# python3 -m pip install --upgrade build
# python3 -m build
## Note: create token a save on $HOME/.pypirc
##       the instructions will be from
#        - https://test.pypi.org/manage/account/token/
#        - https://pypi.org/manage/account/token/

## Test server
# python3 -m twine upload --repository testpypi dist/*
# >> https://test.pypi.org/project/hdp-toolchain/0.8.7/

## Production server
# python3 -m twine upload --repository pypi dist/*
# >> View at: https://pypi.org/project/hdp-toolchain/0.8.7/

### Upload, each new version ---------------------------------------------------
# Note: remember to replace the version number also by string replace, as
#       since some files beyond setup.cfg also have the reference
# rm dist/*
# python3 -m build
# python3 -m twine upload --repository pypi dist/*
